--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'ngx-toastr/toastr'
+@tailwind base
+@tailwind components
+@tailwind utilities
+
+body 
+    background-color: #334155
+    color: #f1f5f9
+
+.active
+    color: #34d399
