--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
-<nav class="bg-slate-700 p-4 text-slate-100">
-  <ul class="flex justify-end space-x-4">
+<nav class="bg-slate-700 p-4 text-slate-100 flex justify-between items-center">
+  <h1 class="text-xl font-bold">Crud Spring Boot Angular</h1>
+  <ul class="flex space-x-4">
     <li><a routerLink='/home' routerLinkActive='active'>Home</a></li>
     <li><a routerLink='/new' routerLinkActive='active'>New</a></li>
   </ul>
