--- a/src/app/product/detail/detail.component.html
+++ b/src/app/product/detail/detail.component.html
@@ -1,1 +1,7 @@
-<p>detail works!</p>
+<div class="container mx-auto p-4 space-y-3 flex flex-col">
+    <h2 class="text-xl">Product:</h2>
+    <p>{{prod.name}}</p>
+    <p>{{prod.price}} €</p>
+    <button type="button" (click)="edit()" class="py-1 px-4 border border-slate-300 rounded-lg self-end
+    hover:bg-slate-300 hover:text-slate-700">edit</button>
+</div>
