--- a/src/app/product/list/list.component.html
+++ b/src/app/product/list/list.component.html
@@ -1,9 +1,9 @@
-<div class="p-6">
+<div class="p-6 container mx-auto">
     <h1 class="text-3xl font-bold mb-6">Products</h1>
     <ul>
         <li *ngFor="let product of products">
-            <div class="flex justify-between">
-                <a routerLink="/products/{{product.id}}">{{product.name}}</a>
+            <div class="flex justify-between py-2 px-4 rounded-md hover:text-emerald-400 hover:bg-slate-800">
+                <a routerLink="/detail/{{product.id}}">{{product.name}}</a>
                 <p>{{product.price}}</p>
             </div>
         </li>
