--- a/src/app/product/update/update.component.html
+++ b/src/app/product/update/update.component.html
@@ -1,1 +1,3 @@
-<p>update works!</p>
+<div class="container mx-auto">
+    <app-product-form type="update" [action]="updateProduct" [product]="product"/>
+</div>
